<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

        <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingBottom="0dip" android:paddingTop="3dip" android:layout_marginBottom="0dip" android:layout_weight="0">

        <Button
            android:id="@+id/episode_bar_library_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/episode_bar_button_library" android:background="#FFC0C0C0" android:layout_gravity="bottom" android:height="30dip" android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/episode_bar_download_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/episode_bar_button_download" android:layout_gravity="bottom" android:background="#FFC0C0C0" android:height="30dip" android:layout_marginLeft="2dip" android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/episode_bar_channel_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/episode_bar_button_channel" android:layout_gravity="bottom" android:background="#FFC0C0C0" android:height="30dip" android:layout_marginLeft="2dip" android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/episode_bar_play_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/episode_bar_button_play" android:layout_gravity="bottom" android:background="#FFFFFFFF" android:height="30dip" android:layout_marginLeft="2dip" android:layout_width="fill_parent"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_weight="0"
        android:background="#FFFFFFFF" android:layout_marginBottom="3dip">

    </FrameLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff5a5a5a"
        android:paddingTop="1dp"
        android:paddingBottom="0dp"
        android:orientation="horizontal">


        <TextView 
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />    
            
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="0dp"
            android:gravity="center">

            <ImageButton android:id="@+id/prev" style="@android:style/MediaButton.Previous"/>
            <ImageButton android:id="@+id/rwnd" style="@android:style/MediaButton.Rew"/>            
            <ImageButton android:id="@+id/pause" style="@android:style/MediaButton.Play"/>
            <ImageButton android:id="@+id/ffwd" style="@android:style/MediaButton.Ffwd"/>            
            <ImageButton android:id="@+id/next" style="@android:style/MediaButton.Next"/>

        </LinearLayout>
        <TextView 
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" /> 


    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:background="#ff5a5a5a"        
        android:orientation="horizontal">  
        
        <TextView android:id="@+id/currenttime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp"
            android:textStyle="bold"
            android:shadowColor="#ff000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content" />        
        
        <TextView android:id="@+id/totaltime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp"
            android:textStyle="bold"
            android:shadowColor="#ff000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content" />        
    </LinearLayout>
          

    <SeekBar android:id="@android:id/progress"
        android:background="#ff5a5a5a"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="4dp" />

    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffffff" />
		
    <ListView android:id="@android:id/list"
        android:layout_width="fill_parent" 
        android:layout_height="0dip"
        android:layout_weight="1"
        />		

</LinearLayout>
