<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="15dp" >

        <Button
            android:id="@+id/ButtonPlay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu_play" />

        <Button
            android:id="@+id/ButtonDownload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu_download" />
    </LinearLayout>

	<ScrollView 
		android:id="@+id/readscrollview" 
		android:orientation="vertical" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
	
		<LinearLayout
		    android:id="@+id/linearLayout3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		
		    <TextView
		        android:id="@+id/channel_view"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/darker_gray"
		        android:text="@string/channel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

		    <LinearLayout
		        android:id="@+id/linearLayout2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >

		        <LinearLayout
		            android:id="@+id/linearLayout4"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:orientation="vertical" >

		            <ImageView
		                android:id="@+id/status_icon"
		                android:layout_width="24dp"
		                android:layout_height="24dp"
		                android:src="@drawable/status_unknown"
		                android:layout_marginBottom="0dp"
		                android:layout_marginTop="2dp"
		                android:layout_marginLeft="0dp"
		                android:layout_marginRight="5dp"
		                android:layout_gravity="center_vertical"/>

		            <ImageView
		                android:id="@+id/keep_icon"
		                android:layout_width="24dp"
		                android:layout_height="24dp"
		                android:src="@drawable/blank"
		                android:layout_gravity="center_vertical"
		                android:layout_marginBottom="5dp"
		                android:layout_marginLeft="0dp"
		                android:layout_marginRight="5dp"
		                android:layout_marginTop="2dp"/>

		        </LinearLayout>

		        <TextView
		            android:id="@+id/full_title_view"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:textSize="18sp" />

		    </LinearLayout>
		
		    <LinearLayout
		        android:id="@+id/linearLayout1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
		
		        <TextView
		            android:id="@+id/time_view"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="5dp"
		            android:layout_weight="0.8"
		            android:background="@drawable/lighter_gray"
		            android:gravity="left"
		            android:paddingRight="10dp"
		            android:textColor="@drawable/black"
		            android:textSize="12sp" />

		        <TextView
		            android:id="@+id/exp_view"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:background="@drawable/lighter_gray"
		            android:gravity="left"
		            android:textColor="@drawable/black"
		            android:textSize="12sp"
		            android:layout_marginBottom="5dp"
		            android:paddingRight="10dp"/>
		
		        <TextView
		            android:id="@+id/duration_view"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="5dp"
		            android:layout_weight="1"
		            android:background="@drawable/lighter_gray"
		            android:gravity="right"
		            android:paddingRight="10dp"
		            android:textColor="@drawable/black"
		            android:textSize="12sp" />
		    </LinearLayout>
		    	
			<TextView  android:id="@+id/content"
			android:textSize="18sp"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
			android:paddingLeft="6dip"
		    android:paddingRight="6dip"/>
		</LinearLayout>
	</ScrollView>

</LinearLayout>
