<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
	<ScrollView 
		android:id="@+id/readscrollview" 
		android:orientation="vertical" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
	
		<LinearLayout
		    android:id="@+id/linearLayout3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >

			<Button
			    android:id="@+id/ButtonEpisodes"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:text="@string/menu_episodes" />
		
		    <TextView
		        android:id="@+id/full_title_view"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/darker_gray"
		        android:text="@string/channel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1" >

		        <ImageView
		            android:id="@+id/suspended_icon"
		            android:layout_width="24dp"
		            android:layout_height="24dp"
		            android:layout_marginBottom="5dp"
		            android:layout_marginLeft="0dp"
		            android:layout_marginRight="5dp"
		            android:layout_marginTop="6dp"
		            android:src="@drawable/blank" />

		        <TextView
		            android:id="@+id/url_view"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/url" />

		    </LinearLayout>

		    <LinearLayout
		        android:id="@+id/linearLayout2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1" >

		        <TextView
		            android:id="@+id/last_updated_view"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="5dp"
		            android:layout_weight="1"
		            android:background="@drawable/lighter_gray"
		            android:gravity="left"
		            android:paddingRight="10dp"
		            android:textColor="@drawable/black"
		            android:textSize="12sp" />

		        <TextView
		            android:id="@+id/last_item_updated_view"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="5dp"
		            android:layout_weight="1"
		            android:background="@drawable/lighter_gray"
		            android:gravity="right"
		            android:paddingRight="10dp"
		            android:textColor="@drawable/black"
		            android:textSize="12sp"/>

		    </LinearLayout>
		
		    <LinearLayout
		        android:id="@+id/linearLayout1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >

		        <TextView
		            android:id="@+id/fail_count_view"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:background="@drawable/lighter_gray"
		            android:gravity="left"
		            android:textColor="@drawable/black"
		            android:textSize="12sp"
		            android:layout_marginBottom="5dp"
		            android:paddingRight="10dp"
		            android:text="fail count"/>
		
		        <TextView
		            android:id="@+id/auto_download_view"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="5dp"
		            android:layout_weight="1"
		            android:background="@drawable/lighter_gray"
		            android:gravity="right"
		            android:paddingRight="10dp"
		            android:textColor="@drawable/black"
		            android:textSize="12sp"
		            android:text="auto download"/>
		    </LinearLayout>

		    <TextView
		        android:id="@+id/description"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="6dip"
		        android:paddingRight="6dip"
		        android:textSize="18sp" />

		    <TextView
		        android:id="@+id/comment"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="6dip"
		        android:paddingRight="6dip"
		        android:textSize="18sp" />

	    	<HorizontalScrollView 
				android:id="@+id/countscrollview" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
		    		    
			    <LinearLayout
			        android:orientation="horizontal"
			        android:id="@+id/countsByStatus"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        />
		    </HorizontalScrollView>
	        
		</LinearLayout>
	</ScrollView>

</LinearLayout>
